# Rust-CLI-Workshop

./: Cargo.toml  README.md
examples/: getoutline_client.rs
src/: config.rs  file_saver.rs  lib.rs  main.rs
src/command/: documents.rs  mod.rs  say_hello.rs
src/getoutline_connection/: auth.rs  documents.rs  mod.rs
src/logic/: auth.rs  documents.rs  mod.rs
